--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.12.2",
     "nodemailer": "^6.10.0",
     "redis": "^4.7.0",
